<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/preference_category_design_title">

        <ListPreference
            android:key="@string/pref_night_mode_key"
            app:title="@string/pref_night_mode_title"
            app:defaultValue="@string/theme_value_default"
            app:dialogTitle="@string/pref_night_mode_title"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_category_notifications"
        android:title="Notifications">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_persistent_notifications_key"
            android:summaryOff="@string/pref_persistent_notifications_summary_off"
            android:summaryOn="@string/pref_persistent_notifications_summary_on"
            android:switchTextOff="@string/pref_persistent_notifications_switch_text_off"
            android:switchTextOn="@string/pref_persistent_notifications_switch_text_on"
            android:title="@string/pref_persistent_notifications_title" />
    </PreferenceCategory>
</PreferenceScreen>