<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_all_items"
            android:title="@string/nav_drawer_item_no_filter" />
    </group>

    <item
        android:id="@+id/nav_drawer_group_condition_title"
        android:title="@string/nav_drawer_categories_section_title">

        <menu>
            <group android:id="@+id/nav_drawer_group_condition" android:checkableBehavior="all">
                <item
                    android:id="@+id/drawer_item_condition_frozen"
                    android:title="@string/condition_frozen" />
                <item
                    android:id="@+id/drawer_item_condition_chilled"
                    android:title="@string/condition_chilled" />
                <item
                    android:id="@+id/drawer_item_condition_room_temp"
                    android:title="@string/condition_room_temp" />
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_drawer_settings_section_title">
        <menu>
            <group
                android:id="@+id/nav_group_other"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/aboutFragment"
                    android:title="@string/menu_item_about_label" />

                <item
                    android:id="@+id/settingsFragment"
                    android:title="@string/action_settings" />
            </group>
        </menu>
    </item>
</menu>