<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dialog_card_padding"
            app:cardCornerRadius="@dimen/dialog_card_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.Dialog.Layout"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_sorting_options_sort_by_title"
                    android:textSize="@dimen/dialog_title_text_size" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <RadioButton
                        android:id="@+id/rb_sort_option_best_before"
                        style="@style/DialogRadioButton"
                        android:text="@string/dialog_sorting_options_best_before_button_label" />

                    <RadioButton
                        android:id="@+id/rb_sort_option_frozen_at"
                        style="@style/DialogRadioButton"
                        android:text="@string/dialog_sorting_options_frozen_at_button_label" />

                    <RadioButton
                        android:id="@+id/rb_sort_option_added_date"
                        style="@style/DialogRadioButton"
                        android:text="@string/dialog_sorting_options_added_at_button_label" />

                    <RadioButton
                        android:id="@+id/rb_sort_option_last_changed_date"
                        style="@style/DialogRadioButton"
                        android:text="@string/dialog_sorting_options_last_changed_at_button_label" />

                    <RadioButton
                        android:id="@+id/rb_sort_option_name"
                        style="@style/DialogRadioButton"
                        android:text="@string/dialog_sorting_options_name_button_label" />

                </RadioGroup>

                <View
                    android:id="@+id/divider5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/dialog_sorting_options_order_title"
                    android:textSize="@dimen/dialog_title_text_size" />


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <RadioButton
                        android:id="@+id/rb_sort_order_ascending"
                        style="@style/DialogRadioButton"
                        android:text="@string/dialog_sorting_options_ascending_button_label" />

                    <RadioButton
                        android:id="@+id/rb_sort_order_descending"
                        style="@style/DialogRadioButton"
                        android:text="@string/dialog_sorting_options_descending_button_label" />
                </RadioGroup>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>
</layout>
