<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mmutert.freshfreezer.MainActivity">
    <item
        android:id="@+id/app_bar_filter"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/menu_item_filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_toggle_dark_mode"
        android:checkable="true"
        android:checkableBehavior="single"
        android:enabled="true"
        android:title="@string/menu_item_enable_dark_mode"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_about"
        android:title="@string/menu_item_about_label"
        android:orderInCategory="200"
        app:showAsAction="never"
        />
</menu>
