<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="selectedOffset"
            type="Integer" />
        <import type="com.mmutert.freshfreezer.ui.databinding.IntStringConverter"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dialog_card_padding"
            app:cardCornerRadius="@dimen/dialog_card_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/DialogLayout"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_add_notification_fragment_title"
                    android:textSize="@dimen/dialog_title_text_size" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="false"
                    android:layout_marginTop="@dimen/dialog_layout_vertical_margin"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_add_notification_offsetAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@{`` + selectedOffset}"
                        android:selectAllOnFocus="true"
                        android:textSize="@dimen/dialog_text_input_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/rg_add_notification_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dialog_layout_vertical_margin">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_button_days"
                        android:checked="true"
                        style="@style/DialogRadioButton"
                        android:text="@string/dialog_add_notification_days_button_title"/>

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_button_weeks"
                        style="@style/DialogRadioButton"
                        android:text="@string/dialog_add_notification_weeks_button_title" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_button_months"
                        style="@style/DialogRadioButton"
                        android:text="@string/dialog_add_notification_months_button_title"/>
                </RadioGroup>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>
</layout>
