<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.mmutert.freshfreezer.data.FrozenItem" />
        <import type="com.mmutert.freshfreezer.ui.databinding.AmountBindingConverter"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.Dialog.Layout">

                <TextView
                    android:id="@+id/take_dialog_title"
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_take_out_title"
                    android:textSize="@dimen/dialog_title_text_size"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/take_dialog_item_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/dialog_take_from_selected_item_text"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/take_dialog_title" />

                <TextView
                    android:id="@+id/take_dialog_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{item.name}"
                    android:textSize="@dimen/take_dialog_text_size"
                    app:layout_constraintBottom_toBottomOf="@id/take_dialog_item_name_title"
                    app:layout_constraintStart_toEndOf="@id/take_dialog_item_name_title"
                    app:layout_constraintTop_toTopOf="@id/take_dialog_item_name_title"
                    tools:text="Hähnchen" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/take_dialog_selected_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/take_dialog_unit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/take_dialog_item_name">

                    <EditText
                        android:id="@+id/et_take_dialog_selected_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="true"
                        android:text="@string/dialog_take_from_default_amount"
                        android:textAlignment="textEnd" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/take_dialog_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{item.unit.toString()}"
                    android:textSize="@dimen/take_dialog_text_size"
                    app:layout_constraintBottom_toBottomOf="@id/take_dialog_selected_amount"
                    app:layout_constraintEnd_toStartOf="@id/take_dialog_divider"
                    app:layout_constraintStart_toEndOf="@id/take_dialog_selected_amount"
                    app:layout_constraintTop_toTopOf="@id/take_dialog_selected_amount"
                    tools:text="g" />

                <TextView
                    android:id="@+id/take_dialog_divider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_take_out_divider_text"
                    android:textSize="@dimen/take_dialog_text_size"
                    app:layout_constraintBottom_toBottomOf="@id/take_dialog_unit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/take_dialog_unit" />

                <TextView
                    android:id="@+id/take_dialog_current_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{item.amount + item.unit.toString()}"
                    android:textSize="@dimen/take_dialog_text_size"
                    app:layout_constraintBottom_toBottomOf="@id/take_dialog_divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/take_dialog_divider"
                    app:layout_constraintTop_toTopOf="@id/take_dialog_divider"
                    tools:text="1000 g" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </FrameLayout>

</layout>