<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.mmutert.freshfreezer.data.FrozenItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@{item.name}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Hähnchen" />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@{item.amount + item.unit.toString()}"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="2 pcs" />

        <TextView
            android:id="@+id/tv_date_frozen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_best_before_date"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_frozen_date_title"
            app:layout_constraintTop_toTopOf="@+id/tv_frozen_date_title"
            tools:text="2020-04-16" />

        <TextView
            android:id="@+id/tv_frozen_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/list_item_frozen_at_title"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tv_amount"
            app:layout_constraintTop_toBottomOf="@+id/tv_amount" />

        <Button
            android:id="@+id/bt_take"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/list_item_take_button_label"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/bt_delete"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_best_before_title"
            app:layout_constraintVertical_chainStyle="packed"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon" />

        <Button
            android:id="@+id/bt_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/list_item_delete_button_label"
            android:textSize="18sp"
            app:icon="@drawable/ic_delete_white_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/bt_take"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bt_take"
            app:layout_constraintTop_toTopOf="@+id/bt_take"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon" />

        <TextView
            android:id="@+id/tv_best_before_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/list_item_best_before_title"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tv_frozen_date_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_frozen_date_title" />

        <TextView
            android:id="@+id/tv_best_before_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/tv_best_before_title"
            app:layout_constraintTop_toTopOf="@+id/tv_best_before_title"
            tools:text="2020-08-12" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>